# first-uv

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: run_test.yml
src/first_uv/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_app.py
